# mpt-finops-api-modifier

./: .dockerignore  .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.test  Makefile  README.md  build_and_run_tests.sh  dev.Dockerfile  docker-compose.yml  env.example  openapi.json  prod.Dockerfile  pyproject.toml  pytest.ini  run_tests.sh  sonar-project.properties  test.Dockerfile
.github/workflows/: pr-build-merge.yml  release.yml
app/: __init__.py  api_contract.py  conftest.py  main.py  operations_api_contract.py
app/core/: api_client.py  auth_jwt_bearer.py  config.py  error_formats.py  exceptions.py  http_exceptions.py  inout_validation.py  input_validation.py  logging_config.py  models.py
app/datasources/: api.py  model.py
app/invitations/: api.py  model.py
app/invitations/services/: external_services.py  invitations.py
app/optscale_api/: auth_api.py  invitation_api.py  orgs_api.py  users_api.py
app/optscale_api/helpers/: auth_tokens_dependency.py
app/organizations/: api.py  model.py
app/router/api_v1/: endpoints.py
app/tests/: test_api_client.py  test_core_input_validation.py  test_error_format.py  test_jwt_auth.py  test_optscale_users_api.py  test_optscle_auth_api.py  test_orgs_api.py  test_user_api.py
app/tests/data/: data.json
app/tests/helpers/: jwt.py
app/users/: api.py  model.py
scripts/: generate_openapi_json.py
tests/: conftest.py  test_api_client.py  test_core_input_validation.py  test_error_format.py  test_external_services.py  test_jwt_auth.py  test_modifier_invitation_api.py  test_modifier_organizations_api.py  test_modifier_user_api.py  test_optscale_organizations_api.py  test_optscale_users_api.py  test_optscle_auth_api.py  test_optscle_invitation_api.py  test_org_api.py  test_orgs_api.py  test_user_api.py
tests/data/: data.json
tests/helpers/: jwt.py
